Se crea la clase Ciudad de manera de registrar el nombre y la zona horaria de las mismas

--- a/volandoAlto/volandoAlto/nbproject/project.properties
+++ b/volandoAlto/volandoAlto/nbproject/project.properties
@@ -1,3 +1,5 @@
+file.reference.volandoAlto-libs=libs
+javac.external.vm=false
 #Fri May 27 13:30:15 UYT 2016
 jnlp.offline-allowed=false
 javadoc.splitindex=true
@@ -7,7 +9,9 @@ build.sysclasspath=ignore
 file.reference.jl1.0.1.jar=libs/jl1.0.1.jar
 javac.target=1.7
 build.generated.dir=${build.dir}/generated
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 debug.test.classpath=${run.test.classpath}
 jnlp.descriptor=application
 build.dir=build
@@ -32,18 +36,24 @@ run.jvmargs=
 manifest.custom.permissions=
 javac.test.processorpath=${javac.test.classpath}
 dist.archive.excludes=
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 jnlp.signing=
 javadoc.notree=false
 dist.jar=${dist.dir}/volandoAlto.jar
 platform.active=default_platform
 annotation.processing.enabled=true
-main.class=volandoAlto.dominio.Principial
+main.class=volandoAlto.dominio.Principal
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
-javac.classpath=${file.reference.commons-lang3-3.3.2.jar}\:${file.reference.jl1.0.1.jar}\:${libs.absolutelayout.classpath}
+javac.classpath=\
+    ${file.reference.commons-lang3-3.3.2.jar}:\
+    ${file.reference.jl1.0.1.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.volandoAlto-libs}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
@@ -59,7 +69,8 @@ annotation.processing.run.all.processors=true
 excludes=
 application.title=volandoAlto
 jnlp.codebase.type=no.codebase
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 endorsed.classpath=
 javadoc.use=true
