--- a/volandoAlto/volandoAlto/nbproject/private/private.properties
+++ b/volandoAlto/volandoAlto/nbproject/private/private.properties
@@ -1,8 +1,8 @@
 compile.on.save=false
 do.depend=false
 do.jar=true
-file.reference.commons-lang3-3.3.2.jar=C:\\Users\\alumnoFI\\Desktop\\obligatorio-2-ingenier-a-de-software-2\\volandoAlto\\volandoAlto\\libs\\commons-lang3-3.3.2.jar
-file.reference.jl1.0.1.jar=C:\\Users\\alumnoFI\\Desktop\\obligatorio-2-ingenier-a-de-software-2\\volandoAlto\\volandoAlto\\libs\\jl1.0.1.jar
+file.reference.commons-lang3-3.3.2.jar=C:\\Users\\alumnoFI\\Documents\\obligatorio-2-is2\\volandoAlto\\volandoAlto\\libs\\commons-lang3-3.3.2.jar
+file.reference.jl1.0.1.jar=C:\\Users\\alumnoFI\\Documents\\obligatorio-2-is2\\volandoAlto\\volandoAlto\\libs\\jl1.0.1.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\alumnoFI\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
